--- a/main/apps/file/admin/templates/file/admin/folder_fields.html
+++ b/main/apps/file/admin/templates/file/admin/folder_fields.html
@@ -2,4 +2,4 @@
 
 {{ form.csrf_token }}
 {{forms.text_field(form.title)}}
-{{forms.text_field(form.is_public)}}
+{{forms.checkbox_field(form.is_public)}}
