--- a/main/apps/file/admin/templates/file/admin/edit_folder.html
+++ b/main/apps/file/admin/templates/file/admin/edit_folder.html
@@ -7,7 +7,10 @@
     <h2 class="page-header">Редактирование папки</h2>
     <form class="form-actions" method="POST" action="">
         <fieldset>
-            {% include 'file/admin/folder_fields.html' %}
+            {{ form.csrf_token }}
+            {{forms.text_field(form.title)}}
+            {{forms.checkbox_field(form.is_public)}}
+
 
             <div class="form-actions">
                 <button type="submit"
