admin base template introduced to eliminate code duplication

--- a/main/apps/file/admin/templates/file/admin/folders.html
+++ b/main/apps/file/admin/templates/file/admin/folders.html
@@ -1,8 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'admin/base.html' %}
 
-# block topnav
-   # include 'admin/top_bar.html'
-# endblock
 
 {% block content %}
     <div class="row">
