--- a/main/apps/news/admin/templates/news/admin/posts.html
+++ b/main/apps/news/admin/templates/news/admin/posts.html
@@ -1,8 +1,4 @@
-{% extends 'base.html' %}
-
-# block topnav
-   # include 'admin/top_bar.html'
-# endblock
+{% extends 'admin/base.html' %}
 
 {% block content %}
     <h1 class="page-header">Блог</h1>
