--- a/main/templates/admin/config_update.html
+++ b/main/templates/admin/config_update.html
@@ -1,9 +1,5 @@
-# extends 'base.html'
+# extends 'admin/base.html'
 # import 'macro/forms.html' as forms
-
-# block topnav
-   # include 'admin/top_bar.html'
-# endblock
 
 # block content
   <div class="page-header">
