--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -36,11 +36,13 @@
     # include 'bit/announcement.html'
     # block header
     # endblock
+    # block maincontainer
     <div class="container-fluid">
       # include 'bit/notifications.html'
       # block content
       # endblock
     </div>
+    # endblock
 <!--noindex-->
     # include 'bit/footer.html'
     # include 'bit/script.html'
