--- a/main/static/src/style/base.less
+++ b/main/static/src/style/base.less
@@ -23,3 +23,17 @@ body {
   margin: auto;
   display: block;
 }
+
+
+/* Option 2B: Reset an entire region with a custom LESS mixin */
+.reset-box-sizing {
+  &,
+  *,
+  *:before,
+  *:after {
+    .box-sizing(content-box);
+  }
+}
+.gsc-input, .gsc-search-button {
+  .reset-box-sizing();
+}
