google search help text design fixed

--- a/main/static/src/style/base.less
+++ b/main/static/src/style/base.less
@@ -24,6 +24,10 @@ body {
   display: block;
 }
 
+#gs_tti50 > input {
+  margin-top:-1px !important;
+}
+
 
 /* Option 2B: Reset an entire region with a custom LESS mixin */
 .reset-box-sizing {
