archive style improvements

--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -5,7 +5,9 @@
     $(function () {
         $("#accordion").accordion({
             collapsible: true,
-            heightStyle: "content"
+            heightStyle: "content",
+            header: "h3",
+            icons: false
         });
     });
 </script>
