footer is not fluid

--- a/main/templates/bit/footer.html
+++ b/main/templates/bit/footer.html
@@ -1,6 +1,6 @@
 {% strip %}
 <footer class="footer" role="contentinfo">
-  <div class="container-fluid">
+  <div class="container">
     <p class="muted">&copy; 2002-2014 - Александр Егоров</p>
   </div>
 </footer>
