--- a/main/templates/bit/footer.html
+++ b/main/templates/bit/footer.html
@@ -1,7 +1,13 @@
 {% strip %}
 <footer class="footer" role="contentinfo">
   <div class="container">
-    <p class="muted">&copy; 2002-2014 - Александр Егоров</p>
+    <div class="social github" data-repo="egoroff">
+      <iframe src="http://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+      <g:plusone size="medium"></g:plusone>
+    </div>
+      <br/>
+      <p class="muted">&copy; 2002-2014 - Александр Егоров</p>
   </div>
 </footer>
 {% endstrip %}
