--- a/main/templates/bit/social.html
+++ b/main/templates/bit/social.html
@@ -5,6 +5,6 @@
     <a href="http://www.facebook.com/sharer.php?u={{ full_uri }}" title="в facebook"
        onclick="window.open(this.href, 'Поделиться ссылкой в facebook', 'width=800,height=300'); return false">
         <small><i class="fa fa-facebook"></i></small></a>&nbsp;&nbsp;
-    <small><span id="plusone-div"></span></small>
+    <g:plusone size="small"></g:plusone>
 {% endif %}
 {% endstrip %}
