home pages redesign

--- a/main/apps/portfolio/templates/portfolio/index.html
+++ b/main/apps/portfolio/templates/portfolio/index.html
@@ -5,7 +5,7 @@
         <h1>
             {{ title }}
             <small>
-                софт, код, документация и прочие полезности.
+                тут я делюсь
             </small>
         </h1>
     </div>
