--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -46,6 +46,14 @@
 
 {% block content %}
     {% strip %}
+    <div class="page-header">
+        <h1>
+            {{ title }}
+            <small>
+                тут я пишу
+            </small>
+        </h1>
+    </div>
     <div class="row">
         <div class="col-md-9">
             {% if not posts %}
