--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -10,11 +10,20 @@
 
 # block content
 {% strip %}
-# include 'bit/search.html'
+
+<div class="page-header">
+    <h1>
+        egoroff.spb.ru
+        <small>
+            блог о программировании, веб, apache, инструментах, хаках и пр.
+        </small>
+    </h1>
+</div>
+
 
 <div class="row">
     <div class="col-md-6">
-        <h1><a href="{{ url_for('news.index') }}">Блог</a></h1>
+        <h2><a href="{{ url_for('news.index') }}">Блог</a></h2>
         {% if posts %}
             <dl id="log">
                 {% for post in posts %}
@@ -26,7 +35,9 @@
         {% endif %}
     </div>
     <div class="col-md-6">
-        <h1>Про апачей</h1>
+        <h2>Поиск</h2>
+        # include 'bit/search.html'
+        <h2>Про апачей</h2>
         {% include 'portfolio/apache_documents_list.html' %}
     </div>
 </div>
