--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -2,6 +2,7 @@
 @import "../../ext/less/bootstrap/bootstrap";
 @import "../../ext/less/nprogress/nprogress";
 @import "../../ext/less/jquery-ui-less/jquery.ui.less";
+@import "../../ext/less/redactor/redactor";
 
 @import "base";
 @import "variables";
@@ -12,4 +13,3 @@
 @import "shCoreEclipse";
 @import "tags";
 @import "apache";
-@import "redactor";
