--- a/main/templates/error.html
+++ b/main/templates/error.html
@@ -5,9 +5,9 @@
     <div class="container">
       <h2>
         <small>{{error.code}}</small>
-        Oh no...! {{error.name}}
+        О нет ...! {{error.name}}
       </h2>
-      <p>Maybe it's our fault.. maybe it's yours.. but either case, this page is unavailable!</p>
+      <p>Возможно моя вина ... возможно ваша, но в любом случае, запрашиваемая страница недоступна!</p>
     </div>
   </div>
 # endblock
