--- a/main/apps/news/admin/templates/news/admin/post_new.html
+++ b/main/apps/news/admin/templates/news/admin/post_new.html
@@ -4,7 +4,8 @@
     <script>
         $(function(){
             $('.redactor').redactor({
-                linebreaks: true
+                linebreaks: true,
+                imageUpload: '{{ image_upload_handler }}'
             });
         });
     </script>
