--- a/main/apps/news/admin/templates/news/admin/post_new.html
+++ b/main/apps/news/admin/templates/news/admin/post_new.html
@@ -1,4 +1,5 @@
 {% extends 'admin/base.html' %}
+# import 'macro/forms.html' as forms
 
 {% block scripts %}
     <script>
@@ -13,10 +14,16 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-12">
-        <h1 class="page-header">Добавление поста</h1>
-        <form method="POST">
-            {% include 'news/admin/post_fields.html' %}
+    <form method="POST">
+        <div class="col-md-4">
+            <h1 class="page-header">Мета информация</h1>
+
+            {{form.csrf_token}}
+            {{forms.text_field(form.created)}}
+            {{forms.text_field(form.title, autofocus=True)}}
+            {{forms.checkbox_field(form.is_public)}}
+            {{forms.text_field(form.tags)}}
+
             <div class="form-actions">
                 <button type="submit"
                     class="btn btn-primary">
@@ -26,7 +33,12 @@
                     Отмена
                 </a>
             </div>
-        </form>
-    </div>
+        </div>
+        <div class="col-md-8">
+            <h1 class="page-header">Тексты</h1>
+            {{forms.redactor_field(form.short_text)}}
+            {{forms.redactor_field(form.text, rows=10)}}
+        </div>
+    </form>
 </div>
 {% endblock %}
