--- a/main/apps/news/admin/templates/news/admin/posts.html
+++ b/main/apps/news/admin/templates/news/admin/posts.html
@@ -4,13 +4,6 @@
     <h1 class="page-header">Блог</h1>
     <div class="row">
         <div class="col-md-10">
-            <a
-                class="btn btn-default btn-lg"
-                href="{{ url_for('admin.news.new_post') }}">
-                Добавить пост
-            </a>
-        </div>
-        <div class="col-md-10">
             <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -58,6 +51,13 @@
 
                 </tbody>
             </table>
+        </div>
+        <div class="col-md-2">
+            <a
+                class="btn btn-default btn-lg btn-success"
+                href="{{ url_for('admin.news.new_post') }}">
+                Добавить пост
+            </a>
         </div>
     </div>
 {% endblock %}
