alowed redactor tags defined. Python colorizing added

--- a/main/apps/news/admin/templates/news/admin/post_edit.html
+++ b/main/apps/news/admin/templates/news/admin/post_edit.html
@@ -6,7 +6,8 @@
         $(function(){
             $('.redactor').redactor({
                 linebreaks: true,
-                imageUpload: '{{ image_upload_handler }}'
+                imageUpload: '{{ image_upload_handler }}',
+                allowedTags: ['p', 'h1', 'h2', 'h3', 'h4', 'h5', 'h6', 'pre', 'code', 'br', 'em', 'strong', 'i', 'a', 'img', 'example', 'ul', 'ol', 'li', 'table', 'tr', 'td', 'link', 'abbr', 'acronym', 'dd', 'dt', 'dl', 'dfn', 'del', 'small', 'article', 'cite' ]
             });
         });
     </script>
