--- a/main/apps/news/admin/templates/news/admin/post_new.html
+++ b/main/apps/news/admin/templates/news/admin/post_new.html
@@ -6,8 +6,11 @@
         $(function(){
             $('.redactor').redactor({
                 linebreaks: true,
+                minHeight: 200,
+                xhtml: true,
                 imageUpload: '{{ image_upload_handler }}',
-                allowedTags: ['p', 'h1', 'h2', 'h3', 'h4', 'h5', 'h6', 'pre', 'code', 'br', 'em', 'strong', 'i', 'a', 'img', 'example', 'ul', 'ol', 'li', 'table', 'tr', 'td', 'link', 'abbr', 'acronym', 'dd', 'dt', 'dl', 'dfn', 'del', 'small', 'article', 'cite' ]
+                clipboardUploadUrl: '{{ image_upload_handler }}',
+                allowedTags: ['p', 'blockquote', 'h1', 'h2', 'h3', 'h4', 'h5', 'h6', 'pre', 'code', 'br', 'em', 'strong', 'i', 'a', 'img', 'example', 'ul', 'ol', 'li', 'table', 'tr', 'td', 'link', 'abbr', 'acronym', 'dd', 'dt', 'dl', 'dfn', 'del', 'small', 'article', 'cite' ]
             });
         });
     </script>
