fluid layout rejected

--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -57,7 +57,7 @@
         </h1>
     </div>
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-lg-9">
             {% if not posts %}
                 Ничего нет
             {% else %}
@@ -75,7 +75,7 @@
             {% endif %}
             {% include 'news/paginator.html' %}
         </div>
-        <div class="col-md-3">
+        <div class="col-lg-3">
             <h3>Метки</h3>
             {% include 'news/tags.html' %}
             <h3>Архив</h3>
