--- a/main/apps/portfolio/templates/portfolio/index.html
+++ b/main/apps/portfolio/templates/portfolio/index.html
@@ -10,11 +10,11 @@
         </h1>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <h1>Про апачей</h1>
             {% include 'portfolio/apache_documents_list.html' %}
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <h1>Загрузки</h1>
             {% include 'portfolio/downloads.html' %}
         </div>
