--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -37,7 +37,7 @@
     # block header
     # endblock
     # block maincontainer
-    <div class="container-fluid">
+    <div class="container">
       # include 'bit/notifications.html'
       # block content
       # endblock
