--- a/main/templates/bit/breadcrumbs.html
+++ b/main/templates/bit/breadcrumbs.html
@@ -1,8 +1,8 @@
 {% strip %}
 # if breadcrumbs
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-lg-12">
             <ol class="breadcrumb">
                 {% block breadcrumbs %}
                     {% for item in breadcrumbs %}
