--- a/main/apps/news/templates/news/post.html
+++ b/main/apps/news/templates/news/post.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-lg-9">
             <p class="text-muted"><i class="fa fa-calendar"></i>&nbsp;<span class="date-from-now">{{ main_post.created }}</span></p>
             {% if content %}
                 {{ content | typo | safe }}
@@ -31,7 +31,7 @@
             </div>
             {% include 'bit/disqus.html' %}
         </div>
-        <div class="col-md-3">
+        <div class="col-lg-3">
             <!--noindex-->
             <h4>
                 Из последнего
