--- a/main/apps/portfolio/templates/portfolio/apache_document.html
+++ b/main/apps/portfolio/templates/portfolio/apache_document.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-lg-12">
                 {% if not apache_docs %}
                     {% if doc and doc == 'mod_proxy' %}
                         {{ html | safe }}
@@ -18,9 +18,6 @@
                 <p>
                 {% include 'bit/disqus.html' %}
                 </p>
-            </div>
-            <div class="col-md-2">
-
             </div>
         </div>
     </div>
