--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -1,6 +1,6 @@
 {% strip %}
 <header class="navbar navbar-default navbar-static-top" role="banner">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
