--- a/main/templates/bit/search.html
+++ b/main/templates/bit/search.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-lg-12">
             <div class="gcse-searchbox-only" data-resultsUrl="/search/" data-queryParameterName="q">
             </div>
         </div>
