--- a/main/templates/feedback.html
+++ b/main/templates/feedback.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4 col-sm-6">
+    <div class="col-lg-8">
       <form method="POST" action="." novalidate>
         {{form.csrf_token}}
 
