--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -6,7 +6,7 @@
 
 # block content
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <div class="gcse-search" data-resultsUrl="/search/" data-queryParameterName="q">
         </div>
     </div>
