--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -22,7 +22,7 @@
 
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <h2><a href="{{ url_for('news.index') }}">Блог</a></h2>
         {% if posts %}
             <dl id="log">
@@ -34,7 +34,7 @@
             <p>Пока ничего нового.</p>
         {% endif %}
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <h2>Поиск</h2>
         # include 'bit/search.html'
         <h2>Про апачей</h2>
