--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -5,7 +5,7 @@
 # endblock
 
 # block maincontainer
-<div class="container-fluid">
+<div class="container">
   # include 'bit/notifications.html'
   # block content
   # endblock
