--- a/main/apps/file/admin/templates/file/admin/folders.html
+++ b/main/apps/file/admin/templates/file/admin/folders.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-lg-5">
             {% block side %}
             <h2>Папки</h2>
             <a class="btn" href="{{ url_for('admin.file.add_folder') }}">
@@ -26,7 +26,7 @@
             </ul>
             {% endblock %}
         </div>
-        <div class="col-md-7">
+        <div class="col-lg-7">
             {% block file_content %}
             {% endblock %}
         </div>
