--- a/main/apps/news/admin/templates/news/admin/posts.html
+++ b/main/apps/news/admin/templates/news/admin/posts.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1 class="page-header">Блог</h1>
     <div class="row">
-        <div class="col-md-10">
+        <div class="col-lg-10">
             <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -52,7 +52,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md-2">
+        <div class="col-lg-2">
             <a
                 class="btn btn-default btn-lg btn-success"
                 href="{{ url_for('admin.news.new_post') }}">
