--- a/main/templates/admin/top_bar.html
+++ b/main/templates/admin/top_bar.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-default navbar-static-top" role="banner">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="{{url_for('admin_config_update')}}">
                 {{ config.BRAND_NAME }}
