--- a/main/static/src/style/base.less
+++ b/main/static/src/style/base.less
@@ -1,8 +1,8 @@
 body {
 
   > .container {
-    padding-top: floor(@line-height-computed / 2);
-    padding-bottom: (@line-height-computed * 2);
+    padding-top: floor(@line-height-computed / 4);
+    padding-bottom: (@line-height-computed);
   }
 }
 
