typography changes - text font family made serif

--- a/main/static/src/style/base.less
+++ b/main/static/src/style/base.less
@@ -41,3 +41,7 @@ body {
 .gsc-input, .gsc-search-button {
   .reset-box-sizing();
 }
+
+.nav, .navbar, .breadcrumb {
+  font-family:    @font-family-sans-serif;
+}
