Verdana as main sans serif font

--- a/main/static/src/style/variables.less
+++ b/main/static/src/style/variables.less
@@ -1,6 +1,7 @@
 @fa-font-path:            "/p/ext/font/font-awesome";
 @icon-font-path:          "/p/ext/font/bootstrap/";
 
+@font-family-sans-serif:  Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-base: @font-family-serif;
 @headings-font-family:    @font-family-sans-serif;
 @navbar-default-bg: rgb(104, 148, 216);
