--- a/main/static/src/style/base.less
+++ b/main/static/src/style/base.less
@@ -42,6 +42,6 @@ body {
   .reset-box-sizing();
 }
 
-.nav, .navbar, .breadcrumb {
+.nav, .navbar, .breadcrumb, .well, .text-muted {
   font-family:    @font-family-sans-serif;
 }
