Google fonts usage

--- a/main/templates/bit/style.html
+++ b/main/templates/bit/style.html
@@ -1,4 +1,5 @@
 {% strip %}
+    <link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic|Open+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 # for style in config.STYLES
   # if config.DEVELOPMENT
     {% set link = style.replace('.less', '.css').replace('src/style/', 'dst/style/') %}
