--- a/main/templates/bit/search.html
+++ b/main/templates/bit/search.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="gcse-searchbox-only" data-resultsUrl="/search/" data-queryParameterName="q">
