refactoring: top navigation duplication eliminated

--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -12,13 +12,7 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        {% for item in sections %}
-            <li {% if item["id"] == current_id %}class="active"{% endif %}>
-                <a href={{ url_for(item['id']) }}>&nbsp;{% if item["class"] %}<i class="{{ item["class"] }}"></i>&nbsp;{% endif %}
-                    {{ item['title'] }}
-                </a>
-            </li>
-        {% endfor %}
+        # include 'bit/top_nav.html'
         # include 'bit/contact_menu.html'
       </ul>
       <ul class="nav navbar-nav navbar-right">
