--- a/main/templates/admin/top_bar.html
+++ b/main/templates/admin/top_bar.html
@@ -1,29 +1,25 @@
-<header class="navbar navbar-default navbar-static-top" role="banner">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="{{url_for('admin_config_update')}}">
-                {{ config.BRAND_NAME }}
-            </a>
-        </div>
-        <nav class="collapse navbar-collapse" role="navigation" id="adminka">
-            <ul class="nav navbar-nav">
-                {% for item in sections %}
-                    <li {% if item["id"] == current_id %}class="active"{% endif %}>
-                        <a href={{ url_for(item['id']) }}>&nbsp;{% if item["class"] %}<i class="{{ item["class"] }}"></i>&nbsp;{% endif %}
-                            {{ item['title'] }}
+{% strip %}
+    <header class="navbar navbar-default navbar-static-top" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{{url_for('admin_config_update')}}">
+                    {{ config.BRAND_NAME }}
+                </a>
+            </div>
+            <nav class="collapse navbar-collapse" role="navigation" id="adminka">
+                <ul class="nav navbar-nav">
+                    # include 'bit/top_nav.html'
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="{{ url_for('welcome') }}">
+                            <i class="fa fa-backward"></i>
+                            Вернуться на сайт
                         </a>
                     </li>
-                {% endfor %}
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="{{ url_for('welcome') }}">
-                        <i class="fa fa-backward"></i>
-                        Вернуться на сайт
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
+                </ul>
+            </nav>
+        </div>
+    </header>
+{% endstrip %}
