ugly main_section_item removed. Title making improved

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -11,6 +11,7 @@
     <title>
       # block title
         {{title + ' |' if title}}
+        {{current_title + ' |' if current_title}}
       # endblock
       {{config.CONFIG_DB.brand_name}}
     </title>
