Main sections header fixed

--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -54,7 +54,7 @@
         <div class="col-lg-9">
             <div class="page-header">
                 <h1>
-                    {{ title }}
+                    {{ current_title }}
                     <small data-bind="text: titleExt">тут я пишу</small>
                 </h1>
             </div>
