--- a/main/apps/portfolio/templates/portfolio/index.html
+++ b/main/apps/portfolio/templates/portfolio/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="page-header">
         <h1>
-            {{ title }}
+            {{ current_title }}
             <small>
                 тут я делюсь
             </small>
