--- a/main/templates/bit/social.html
+++ b/main/templates/bit/social.html
@@ -1,10 +1,3 @@
 {% strip %}
-{% if full_uri %}
-    &nbsp;&nbsp;&nbsp;
-    <a href="http://twitter.com/home/?status={{ full_uri }}" title="в твиттер"><small><i class="fa fa-twitter"></i></small></a>&nbsp;&nbsp;
-    <a href="http://www.facebook.com/sharer.php?u={{ full_uri }}" title="в facebook"
-       onclick="window.open(this.href, 'Поделиться ссылкой в facebook', 'width=800,height=300'); return false">
-        <small><i class="fa fa-facebook"></i></small></a>&nbsp;&nbsp;
-    <g:plusone size="small"></g:plusone>
-{% endif %}
+<span class="pluso pull-right" data-background="transparent" data-options="small,square,line,horizontal,counter,theme=06" data-services="facebook,twitter,vkontakte,linkedin,bookmark,google"></span>
 {% endstrip %}
