--- a/main/templates/bit/top_nav.html
+++ b/main/templates/bit/top_nav.html
@@ -1,3 +1,4 @@
+{% strip %}
 {% for item in sections %}
     <li {% if item["id"] == current_id %}class="active"{% endif %}>
         <a href={{ url_for(item['id']) }}>&nbsp;{% if item["class"] %}<i class="{{ item["class"] }}"></i>&nbsp;{% endif %}
@@ -5,3 +6,4 @@
         </a>
     </li>
 {% endfor %}
+{% endstrip %}
