Google search API key added into configuration DB

--- a/main/templates/admin/config_update.html
+++ b/main/templates/admin/config_update.html
@@ -38,6 +38,7 @@
           # include "admin/bit/facebook_oauth.html"
           # include "admin/bit/google_analytics_tracking_id.html"
           # include "admin/bit/twitter_oauth.html"
+          # include "admin/bit/search_api_key.html"
         </div>
       </fieldset>
     </div>
