--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -1,14 +1,58 @@
 # extends 'base.html'
 
-# block searchscript
-# include 'bit/searchscript.html'
+# block content
+
+  <form method="GET" class="form-inline" action=" {{ action_uri }}" novalidate>
+    <div class="row">
+      <div class="col-lg-12">
+          <input id="q" name="q" class="form-control" type="text" value=""/>
+          <a id="start_search" class="btn btn-primary fa fa-search"> Поиск</a>
+      </div>
+    </div>
+  </form>
+    <div class="row">
+          <div class="col-lg-12">
+                <br/>
+                <div class="text-muted" data-bind="if: displayResults">Результатов: примерно <span data-bind="text: totalResults"></span><nobr> (<span data-bind="text: searchTime"></span> cек.)</nobr><p/></div>
+                <dl data-bind="template: { name: 'customsearch', foreach: items }"></dl>
+
+              <ul class="pagination" data-bind="template: { name: 'pages', foreach: pages }">
+               </ul>
+          </div>
+    </div>
 # endblock
 
-# block content
-  <div class="row">
-    <div class="col-lg-12">
-        <div class="gcse-search" data-resultsUrl="/search/" data-queryParameterName="q">
-        </div>
-    </div>
-  </div>
+# block scripts
+
+<script id="customsearch" type="text/html">
+    <dt>
+        <a data-bind="html: htmlTitle, attr: { href: link  }"></a><br/>
+        <span class="text-muted small" data-bind="html: htmlFormattedUrl"></span>
+    </dt>
+    <dd class="small" data-bind="html: htmlSnippet"></dd>
+    <br/>
+</script>
+
+<script id="pages" type="text/html">
+    <li>
+        <a data-bind="text: title, attr: { href: link  }"></a>
+    </li>
+</script>
+
+<script type="text/javascript">
+
+    m = new window.SearchModel();
+    ko.applyBindings(m);
+
+    $( "#start_search" ).click(function() {
+        searchquery = {
+            "q" : $( "#q" ).val(),
+            "key" : "{{ search.key }}",
+            "cx" : "{{ search.cx }}"
+        };
+        m.dosearch('{{ action_uri }}', searchquery);
+    });
+
+</script>
+
 # endblock
