--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -1,7 +1,7 @@
 # extends 'base.html'
 
 # block content
-  <form method="GET" class="form-inline" action=" {{ action_uri }}" novalidate>
+  <form method="GET" id="search-form" class="form-inline" action=" {{ action_uri }}" novalidate>
     {% strip %}
     <div class="row">
       <div class="col-lg-12">
@@ -17,7 +17,7 @@
                 <div class="text-muted" data-bind="if: displayResults">Результатов: примерно <span data-bind="text: totalResults"></span><nobr> (<span data-bind="text: searchTime"></span> cек.)</nobr><p/></div>
                 <dl data-bind="template: { name: 'customsearch', foreach: items }"></dl>
 
-              <ul class="pagination" data-bind="template: { name: 'pages', foreach: pages }">
+              <ul class="pagination" id="search-pager" data-bind="template: { name: 'pages', foreach: pages }">
                </ul>
           </div>
   </div>
@@ -35,8 +35,8 @@
 </script>
 
 <script id="pages" type="text/html">
-    <li>
-        <a data-bind="text: title, attr: { href: link  }"></a>
+    <li data-bind="attr: { class: cls  }">
+        <a data-bind="text: title, attr: { href: link }"></a>
     </li>
 </script>
 
@@ -45,11 +45,36 @@
     m = new window.SearchModel();
     ko.applyBindings(m);
 
+    $( "#search-form").on('submit', function(e) {
+        e.preventDefault();
+        searchquery = {
+            "q" : $( "#q" ).val(),
+            "key" : "{{ search.key }}",
+            "cx" : "{{ search.cx }}"
+        };
+        m.dosearch('{{ action_uri }}', searchquery);
+    });
+
     $( "#start_search" ).click(function() {
         searchquery = {
             "q" : $( "#q" ).val(),
             "key" : "{{ search.key }}",
             "cx" : "{{ search.cx }}"
+        };
+        m.dosearch('{{ action_uri }}', searchquery);
+    });
+
+    $("#search-pager").on('click', 'li > a', function(event) {
+        var ix = parseInt(event.target.hash.slice(1), 10) - 1;
+
+        $('#search-pager > li').removeClass('active');
+        $(this).parent('li').addClass('active');
+        var start = m.count * ix + 1;
+        searchquery = {
+            "q" : $( "#q" ).val(),
+            "key" : "{{ search.key }}",
+            "cx" : "{{ search.cx }}",
+            "start" : start
         };
         m.dosearch('{{ action_uri }}', searchquery);
     });
