--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -1,17 +1,21 @@
 # extends 'base.html'
 
 # block content
-  <form method="GET" id="search-form" class="form-inline" action=" {{ action_uri }}" novalidate>
     {% strip %}
-    <div class="row">
-      <div class="col-lg-12">
-          <input id="q" name="q" class="form-control" type="text" value=""/>
-          <a id="start_search" class="btn btn-primary fa fa-search"> Поиск</a>
+
+      <div class="row">
+        <div class="col-lg-8">
+            <label class="sr-only" for="q">форма поиска</label>
+            <input id="q" name="q" class="form-control" type="text" value=""/>
+        </div>
+        <div class="col-lg-4">
+            <a id="start_search" class="btn btn-primary fa fa-search"> Поиск</a>
+        </div>
       </div>
-    </div>
+
     {% endstrip %}
-  </form>
-  <div class="row">
+
+    <div class="row">
           <div class="col-lg-12">
                 <br/>
                 <div class="text-muted" data-bind="if: displayResults">Результатов: примерно <span data-bind="text: totalResults"></span><nobr> (<span data-bind="text: searchTime"></span> cек.)</nobr><p/></div>
@@ -20,7 +24,7 @@
               <ul class="pagination" id="search-pager" data-bind="template: { name: 'pages', foreach: pages }">
                </ul>
           </div>
-  </div>
+    </div>
 # endblock
 
 # block scripts
@@ -45,23 +49,29 @@
     m = new window.SearchModel();
     ko.applyBindings(m);
 
-    $( "#search-form").on('submit', function(e) {
-        e.preventDefault();
+    function runSearch(params) {
         searchquery = {
             "q" : $( "#q" ).val(),
             "key" : "{{ search.key }}",
             "cx" : "{{ search.cx }}"
         };
+        if(params) {
+            for (var attrname in params) {
+                searchquery[attrname] = params[attrname];
+            }
+        }
         m.dosearch('{{ action_uri }}', searchquery);
+    }
+
+    $( "#q").keypress(function(e) {
+        if ( e.which != 13 ) {
+            return;
+        }
+        runSearch();
     });
 
     $( "#start_search" ).click(function() {
-        searchquery = {
-            "q" : $( "#q" ).val(),
-            "key" : "{{ search.key }}",
-            "cx" : "{{ search.cx }}"
-        };
-        m.dosearch('{{ action_uri }}', searchquery);
+        runSearch();
     });
 
     $("#search-pager").on('click', 'li > a', function(event) {
@@ -70,13 +80,7 @@
         $('#search-pager > li').removeClass('active');
         $(this).parent('li').addClass('active');
         var start = 10 * ix + 1;
-        searchquery = {
-            "q" : $( "#q" ).val(),
-            "key" : "{{ search.key }}",
-            "cx" : "{{ search.cx }}",
-            "start" : start
-        };
-        m.dosearch('{{ action_uri }}', searchquery);
+        runSearch( { "start" : start });
     });
 
 </script>
