--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -14,6 +14,15 @@
       <ul class="nav navbar-nav">
         # include 'bit/top_nav.html'
       </ul>
+
+     <form method="GET" id="search-form-top" class="navbar-form navbar-left" role="search" action="{{url_for('search')}}" novalidate>
+        <div class="form-group form-group-sm">
+            <label class="sr-only" for="q_top">форма поиска</label>
+            <input id="q_top" name="q" class="form-control" type="text" value=""/>
+        </div>
+        <button type="submit" class="btn btn-default fa fa-search"> Поиск</button>
+     </form>
+
       <ul class="nav navbar-nav navbar-right">
         # include 'bit/user_menu.html'
       </ul>
