--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -43,12 +43,7 @@
 </script>
 # endblock
 
-{% block head %}
-
-{% endblock %}
-
-
-{% block content %}
+# block content
     {% strip %}
     <div class="row">
         <div class="col-lg-9">
@@ -83,4 +78,4 @@
         </div>
     </div>
     {% endstrip %}
-{% endblock %}
+# endblock
