refactoring: getParameterByName moved to utils

--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -83,15 +83,8 @@
         runSearch( { "start" : start });
     });
 
-    function getParameterByName(name) {
-        name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-            results = regex.exec(location.search);
-        return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-    }
-
     $( document ).ready(function() {
-        var q = getParameterByName('q');
+        var q = window.getParameterByName('q');
         if(q) {
            $( "#q" ).val(q);
            runSearch();
