--- a/main/templates/admin/top_bar.html
+++ b/main/templates/admin/top_bar.html
@@ -2,6 +2,12 @@
     <header class="navbar navbar-default navbar-static-top" role="banner">
         <div class="container">
             <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
                 <a class="navbar-brand" href="{{url_for('admin_config_update')}}">
                     {{ config.BRAND_NAME }}
                 </a>
