--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -20,7 +20,7 @@
             <label class="sr-only" for="q_top">форма поиска</label>
             <input id="q_top" name="q" class="form-control" type="text" value=""/>
         </div>
-        <button type="submit" class="btn btn-default fa fa-search"> Поиск</button>
+        <button type="submit" class="btn btn-default"><i class="fa fa-search"></i> Поиск</button>
      </form>
 
       <ul class="nav navbar-nav navbar-right">
