--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -9,7 +9,7 @@
             <input id="q" name="q" class="form-control" type="text" value=""/>
         </div>
         <div class="col-lg-4">
-            <a id="start_search" class="btn btn-primary fa fa-search"> Искать</a>
+            <a id="start_search" class="btn btn-primary"><i class="fa fa-search"></i> Искать</a>
         </div>
       </div>
 
