noindex for navigation

--- a/main/apps/news/templates/news/archive.html
+++ b/main/apps/news/templates/news/archive.html
@@ -1,4 +1,5 @@
 {% strip %}
+<!--noindex-->
 {% if not archieve %}
     <p>Ничего нет</p>
 {% else %}
@@ -13,4 +14,5 @@
         {% endfor %}
     </div>
 {% endif %}
+<!--/noindex-->
 {% endstrip %}
