--- a/main/apps/news/templates/news/tags.html
+++ b/main/apps/news/templates/news/tags.html
@@ -1,4 +1,5 @@
 {% strip %}
+<!--noindex-->
 <div class="tags">
     {% if not tags %}
         <p>Ничего нет</p>
@@ -13,4 +14,5 @@
         </ul>
     {% endif %}
 </div>
+<!--/noindex-->
 {% endstrip %}
