bootstrapvalidator lib added

--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -3,6 +3,7 @@
 @import "../../ext/less/nprogress/nprogress";
 @import "../../ext/less/jquery-ui-less/jquery.ui.less";
 @import "../../ext/less/redactor/redactor";
+@import "../../ext/less/bootstrapvalidator/bootstrapValidator.css";
 
 @import "base";
 @import "variables";
