bootstrapvalidator css fixed

--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -3,7 +3,6 @@
 @import "../../ext/less/nprogress/nprogress";
 @import "../../ext/less/jquery-ui-less/jquery.ui.less";
 @import "../../ext/less/redactor/redactor";
-@import "../../ext/less/bootstrapvalidator/bootstrapValidator.css";
 
 @import "base";
 @import "variables";
@@ -11,6 +10,7 @@
 @import "footer";
 @import "signin";
 @import "user";
+@import "bootstrapValidator";
 @import "shCoreEclipse";
 @import "tags";
 @import "apache";
