--- a/main/templates/admin/config_update.html
+++ b/main/templates/admin/config_update.html
@@ -37,6 +37,7 @@
           # include "admin/bit/flask_secret_key.html"
           # include "admin/bit/facebook_oauth.html"
           # include "admin/bit/google_analytics_tracking_id.html"
+          # include "admin/bit/recaptcha.html"
           # include "admin/bit/twitter_oauth.html"
           # include "admin/bit/search_api_key.html"
         </div>
