--- a/main/templates/macro/forms.html
+++ b/main/templates/macro/forms.html
@@ -141,8 +141,8 @@
       {{field.widget.frame_url}}
       {{field.label(class='control-label', for='recaptcha_response_field')}}
       <div class="small pull-right">
-        <a id="recaptcha_reload_btn" href="#" title="Get a new challenge" tabindex="-1"><span class="fa fa-refresh"></span></a> |
-        <a href="http://www.google.com/intl/en/policies/" target="_blank" tabindex="-1">Privacy & Terms</a>
+        <a id="recaptcha_reload_btn" href="#" title="Получить новый код" tabindex="-1"><span class="fa fa-refresh"></span></a> |
+        <a href="http://www.google.com/intl/ru/policies/" target="_blank" tabindex="-1">Конфиденциальность</a>
       </div>
       {{field}}
       {{field_errors(field)}}
