Yandex verification code added

--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -2,6 +2,7 @@
 
 # block head
     <meta name="google-site-verification" content="PHs3gMRw0_sIAdVqjk38_fbq9h3VGHkkIq3w1chJXWs"/>
+    <meta name='yandex-verification' content='4c9a9332153bb06f' />
 # endblock
 
 # block content
