Unique meta description for each page

--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -1,6 +1,6 @@
 # extends 'base.html'
 
-# block head
+# block meta
     <meta name="google-site-verification" content="PHs3gMRw0_sIAdVqjk38_fbq9h3VGHkkIq3w1chJXWs"/>
     <meta name='yandex-verification' content='4c9a9332153bb06f' />
 # endblock
