--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,9 +6,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="Сайт об обычном программировании и веб технологиях, вроде apache, парсера и других. Есть инструменты для вычисления хэшей и восстановления строк">
     <meta name="keywords" content="apache,mod_rewrite,перевод,документация,хэш,md5,sha1,восстановление,logviewer,программирование,веб,примеры,кода">
     <meta name="author" content="Александр Егоров">
+    {% if meta_description %}
+        <meta name="description" content="{{ meta_description }}">
+    {% endif %}
+    # block meta
+    # endblock
     <title>
       # block title
         {{title + ' |' if title}}
