Keywords for sections from site map

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,6 +10,9 @@
     {% if meta_description %}
         <meta name="description" content="{{ meta_description }}">
     {% endif %}
+    {% if keywords %}
+        <meta name="keywords" content="{{ keywords }}">
+    {% endif %}
     # block meta
     # endblock
     <title>
