blog structured data draft

--- a/main/apps/news/templates/news/post_box.html
+++ b/main/apps/news/templates/news/post_box.html
@@ -1,6 +1,6 @@
 {% strip %}
-    <dt><small><i class="icon-calendar"></i>&nbsp;<span class="shortDateFormat">{{ post.created }}</span></small>&nbsp;
-        <a href="{{ url_for('news.post', key_id=post.key.id()) }}">{{ post.title }}</a>
+    <dt><small><i class="icon-calendar"></i>&nbsp;<span itemprop="datePublished" class="shortDateFormat">{{ post.created }}</span></small>&nbsp;
+        <a itemprop="url" href="{{ url_for('news.post', key_id=post.key.id()) }}"><span itemprop="name">{{ post.title }}</span></a>
     </dt>
-    <dd>{{ post.short_text | safe }}</dd>
+    <dd itemprop="description">{{ post.short_text | safe }}</dd>
 {% endstrip %}
