--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -56,7 +56,7 @@
             {% if not posts %}
                 Ничего нет
             {% else %}
-                <dl id="blogcontainer">
+                <dl itemscope itemtype="http://schema.org/BlogPosting" id="blogcontainer">
                     {% for post in posts.object_list %}
                         {% include 'news/post_box.html' %}
                     {% endfor %}
