Software structured data draft

--- a/main/apps/portfolio/templates/portfolio/downloads.html
+++ b/main/apps/portfolio/templates/portfolio/downloads.html
@@ -3,9 +3,9 @@
     <h3> {{ download }}</h3>
     <ul class="list-unstyled">
     {% for f in downloads[download] %}
-        <li>
-            <a class="fa fa-download" href="{{ f.url }}" title="Размер:&nbsp;{{ f.human_readable_size }}" onclick="_gaq.push(['_trackPageview', '{{ f.title_filename }}']);">&nbsp;{{ f.description }}</a>&nbsp;
-            <small><i class="fa fa-calendar"></i>&nbsp;<span class="shortDateFormat">{{ f.created }}</span></small>
+        <li itemscope itemtype="http://schema.org/SoftwareApplication">
+            <a itemprop="downloadUrl" class="fa fa-download" href="{{ f.url }}" title="Размер:&nbsp;{{ f.human_readable_size }}" onclick="_gaq.push(['_trackPageview', '{{ f.title_filename }}']);">&nbsp;<span itemprop="name">{{ f.description }}</span></a>&nbsp;
+            <small><i class="fa fa-calendar"></i>&nbsp;<span itemprop="datePublished" class="shortDateFormat">{{ f.created }}</span></small>
         </li>
     {% endfor %}
     </ul>
