--- a/main/static/src/style/variables.less
+++ b/main/static/src/style/variables.less
@@ -1,5 +1,5 @@
-@fa-font-path:            "/p/ext/font/font-awesome";
-@icon-font-path:          "/p/ext/font/bootstrap/";
+@fa-font-path:            "/p/ext/font-awesome/fonts";
+@icon-font-path:          "/p/ext/bootstrap/fonts/";
 
 @font-family-sans-serif:  'Open Sans', Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       'Noto Serif', Georgia, "Times New Roman", Times, serif;
