blog refactoring: some blog logic moved to coffee script file

--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -20,24 +20,11 @@
     vm.titleExt("тут я пишу");
 
     window.LoadBlog = function(query, tExt) {
-        vm.getPostsUsingQuery(query, false);
-        if(tExt){
-            vm.titleExt(tExt)
-        }
+        vm.loadBlog(query, tExt);
     };
 
     $( document ).ready(function() {
-        if(window.location.hash) {
-            var href = window.location.hash;
-            var vars = href.split('&');
-            vars.forEach(function (v) {
-                var pair = v.split('=');
-                if(pair[0] == '#tag') {
-                    var e = $.Event("click");
-                    $('#t_' + pair[1]).trigger(e);
-                }
-            });
-        }
+        vm.setEventHandlers();
     });
 
 </script>
