Revert "runSearch implementation moved to coffee"
This reverts commit d1d4237df75dc15df7eab765fbc31d1eb7fb97b0.

--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -50,7 +50,17 @@
     ko.applyBindings(m);
 
     function runSearch(params) {
-        m.runSearch("{{ search.key }}", "{{ search.cx }}", params, '{{ action_uri }}');
+        searchquery = {
+            "q" : $( "#q" ).val(),
+            "key" : "{{ search.key }}",
+            "cx" : "{{ search.cx }}"
+        };
+        if(params) {
+            for (var attrname in params) {
+                searchquery[attrname] = params[attrname];
+            }
+        }
+        m.dosearch('{{ action_uri }}', searchquery);
     }
 
     $( "#q").keypress(function(e) {
